package model;

public enum Difficulty {
    BEGINNER, INTERMEDIATE, ADVANCED
}

